deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: uet-app-distributor
  labels:
    app: distributor
  name: distributor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: distributor
  template:
    metadata:
      labels:
        app: distributor
    spec:
      containers:
        - image: thainm/uet-app-distributor:latest
          name: distributor
          command:
            - /bin/sh
            - -c
            - "python manage.py runserver 0.0.0.0:8080"
          volumeMounts:
            - name: service-account
              mountPath: /secrets
              readOnly: true
      volumes:
        - name: service-account
          secret:
            secretName: distributor-sa
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: distributor-service
  name: distributor-service
  namespace: uet-app-distributor
spec:
  ports:
    - name: distributor
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: distributor
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: distributor-ingress
  namespace: uet-app-distributor
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: distributor-service
                port:
                  number: 8080
